--- a/lindera-cli/Cargo.toml
+++ b/lindera-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-cli"
-version = "0.9.0"
+version = "0.9.1"
 edition = "2021"
 description = "A command-line interface for Lindera."
 documentation = "https://docs.rs/lindera-cli"
@@ -11,13 +11,16 @@ keywords = ["morphological", "analysis", "cli"]
 categories = ["text-processing"]
 license = "MIT"
 
+[features]
+smallbinary = ["lindera/smallbinary"]
+
 [dependencies]
 anyhow = "1.0"
 clap = { version = "3.1", features = ["derive"] }
 stringreader = "0.1"
 
-lindera = { version = "0.9.0", path = "../lindera" }
-lindera-core = { version = "0.9.0", path = "../lindera-core" }
+lindera = { version = "0.9.1", path = "../lindera" }
+lindera-core = { version = "0.9.1", path = "../lindera-core" }
 
 [[bin]]
 name = "lindera"
