--- a/lindera-ipadic-builder/Cargo.toml
+++ b/lindera-ipadic-builder/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-ipadic-builder"
-version = "0.9.0"
+version = "0.9.1"
 edition = "2021"
 description = "A Japanese morphological dictionary builder for IPADIC."
 documentation = "https://docs.rs/lindera-ipadic-builder"
@@ -10,6 +10,9 @@ readme = "README.md"
 keywords = ["japanese", "morphological", "dictionary", "builder", "ipadic"]
 categories = ["text-processing"]
 license = "MIT"
+
+[features]
+compress = ["lindera-compress"]
 
 [dependencies]
 anyhow = "1.0"
@@ -21,9 +24,9 @@ glob = "0.3"
 serde = "1.0"
 yada = "0.5"
 
-lindera-core = { version = "0.9.0", path = "../lindera-core" }
-lindera-decompress = { version = "0.9.0", path = "../lindera-decompress" }
-lindera-compress = { version = "0.9.0", path = "../lindera-compress" }
+lindera-core = { version = "0.9.1", path = "../lindera-core" }
+lindera-decompress = { version = "0.9.1", path = "../lindera-decompress" }
+lindera-compress = { version = "0.9.1", path = "../lindera-compress", optional = true }
 
 [[bin]]
 name = "lindera-ipadic-builder"
