--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera"
-version = "0.9.0"
+version = "0.9.1"
 edition = "2021"
 description = "A morphological analysis library."
 documentation = "https://docs.rs/lindera"
@@ -11,6 +11,9 @@ keywords = ["morphological", "analysis", "library"]
 categories = ["text-processing"]
 license = "MIT"
 
+[features]
+smallbinary = ["lindera-ipadic/smallbinary"]
+
 [dependencies]
 anyhow = "1.0"
 bincode = "1.3"
@@ -19,10 +22,10 @@ encoding = "0.2"
 serde = {version="1.0", features = ["derive"] }
 serde_json = "1.0"
 
-lindera-core = { version = "0.9.0", path = "../lindera-core" }
-lindera-dictionary = { version = "0.9.0", path = "../lindera-dictionary" }
-lindera-ipadic = { version = "0.9.0", path = "../lindera-ipadic" }
-lindera-ipadic-builder = { version = "0.9.0", path = "../lindera-ipadic-builder" }
+lindera-core = { version = "0.9.1", path = "../lindera-core" }
+lindera-dictionary = { version = "0.9.1", path = "../lindera-dictionary" }
+lindera-ipadic = { version = "0.9.1", path = "../lindera-ipadic" }
+lindera-ipadic-builder = { version = "0.9.1", path = "../lindera-ipadic-builder" }
 
 
 [dev-dependencies]
