--- a/lindera-core/Cargo.toml
+++ b/lindera-core/Cargo.toml
@@ -16,6 +16,7 @@ anyhow = "1.0"
 bincode = "1.3"
 byteorder = "1.4"
 encoding = "0.2"
+log = "0.4"
 serde = {version="1.0", features = ["derive"] }
 thiserror = "1.0"
 yada = "0.5"
