--- a/lindera-ipadic-builder/Cargo.toml
+++ b/lindera-ipadic-builder/Cargo.toml
@@ -20,7 +20,9 @@ bincode = "1.3"
 byteorder = "1.4"
 clap = { version = "3.1", features = ["derive"] }
 encoding = "0.2"
+env_logger = "0.9"
 glob = "0.3"
+log = "0.4"
 serde = "1.0"
 yada = "0.5"
 
