Set max-parallel

--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -29,6 +29,7 @@ jobs:
   test:
     name: Test
     strategy:
+      max-parallel: 2
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
         toolchain: [stable]
