Set max-parallel

--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -8,6 +8,7 @@ jobs:
   test:
     name: Test
     strategy:
+      max-parallel: 1
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
         toolchain: [stable, beta, nightly]
