--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -31,10 +31,11 @@ jobs:
     strategy:
       # max-parallel: 1
       matrix:
-        # os: [ubuntu-latest, macOS-latest, windows-latest]
-        os: [ubuntu-latest, macOS-latest]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+        # os: [ubuntu-latest, macOS-latest]
         toolchain: [stable]
-        features: ["", "ipadic", "unidic", "ko-dic", "cc-cedict", "compress"]
+        # features: ["", "ipadic", "unidic", "ko-dic", "cc-cedict", "compress"]
+        features: ["", "ipadic", "ko-dic", "cc-cedict", "compress"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
