Add feature flag for dictionaries (#153)
* Add feature flag for dictionaries

* Add feature flags

* Set max-parallel

* Set max-parallel

* Set max-parallel to 1

* Exclude Windows

* Add ko-dic

* Fix format

* Fix dependency

* Add CC-CEDICT

* Update workflows

* Add windows-latest, remove unidic

* revert

--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -29,10 +29,13 @@ jobs:
   test:
     name: Test
     strategy:
+      # max-parallel: 1
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        # os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest, macOS-latest]
         toolchain: [stable]
-        features: ["", "smallbinary"]
+        features: ["", "ipadic", "unidic", "ko-dic", "cc-cedict", "compress"]
+        # features: ["", "ipadic", "ko-dic", "cc-cedict", "compress"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
