--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -8,9 +8,12 @@ jobs:
   test:
     name: Test
     strategy:
+      # max-parallel: 1
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        # os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest, macOS-latest]
         toolchain: [stable, beta, nightly]
+        features: ["", "ipadic", "unidic", "ko-dic", "cc-cedict", "compress"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -22,3 +25,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --features "${{ matrix.features }}"
