--- a/lindera-ko-dic/Cargo.toml
+++ b/lindera-ko-dic/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-ko-dic"
-version = "0.11.0"
+version = "0.11.1"
 edition = "2021"
 description = "A Japanese morphological dictionary for ko-dic."
 documentation = "https://docs.rs/lindera-ko-dic"
@@ -12,15 +12,16 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
+ko-dic = []
 compress = ["lindera-ko-dic-builder/compress", "lindera-decompress"]
 
 [dependencies]
 bincode = "1.3"
 byteorder = "1.4"
-once_cell = "1"
+once_cell = "1.3"
 
-lindera-core = { version = "0.11.0", path = "../lindera-core" }
-lindera-decompress = { version = "0.11.0", path = "../lindera-decompress", optional = true }
+lindera-core = { version = "0.11.1", path = "../lindera-core" }
+lindera-decompress = { version = "0.11.1", path = "../lindera-decompress", optional = true }
 
 [build-dependencies]
 encoding = "0.2"
@@ -29,5 +30,5 @@ reqwest = "0.11"
 tar = "0.4"
 tokio = { version = "1.9", features = ["full"] }
 
-lindera-core = { version = "0.11.0", path = "../lindera-core" }
-lindera-ko-dic-builder = { version = "0.11.0", path = "../lindera-ko-dic-builder"}
+lindera-core = { version = "0.11.1", path = "../lindera-core" }
+lindera-ko-dic-builder = { version = "0.11.1", path = "../lindera-ko-dic-builder"}
