--- a/lindera-unidic/Cargo.toml
+++ b/lindera-unidic/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-unidic"
-version = "0.11.0"
+version = "0.11.1"
 edition = "2021"
 description = "A Japanese morphological dictionary for UniDic."
 documentation = "https://docs.rs/lindera-unidic"
@@ -12,15 +12,16 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
+unidic = []
 compress = ["lindera-unidic-builder/compress", "lindera-decompress"]
 
 [dependencies]
 bincode = "1.3"
 byteorder = "1.4"
-once_cell = "1"
+once_cell = "1.3"
 
-lindera-core = { version = "0.11.0", path = "../lindera-core" }
-lindera-decompress = { version = "0.11.0", path = "../lindera-decompress", optional = true }
+lindera-core = { version = "0.11.1", path = "../lindera-core" }
+lindera-decompress = { version = "0.11.1", path = "../lindera-decompress", optional = true }
 
 [build-dependencies]
 encoding = "0.2"
@@ -28,5 +29,5 @@ reqwest = "0.11"
 zip = "0.5"
 tokio = { version = "1.9", features = ["full"] }
 
-lindera-core = { version = "0.11.0", path = "../lindera-core" }
-lindera-unidic-builder = { version = "0.11.0", path = "../lindera-unidic-builder"}
+lindera-core = { version = "0.11.1", path = "../lindera-core" }
+lindera-unidic-builder = { version = "0.11.1", path = "../lindera-unidic-builder"}
