--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,17 +14,17 @@ jobs:
       matrix:
         target:
           - x86_64-unknown-linux-gnu
-          # - x86_64-pc-windows-msvc
+          - x86_64-pc-windows-msvc
           - x86_64-apple-darwin
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-          # - target: x86_64-pc-windows-msvc
-          #   os: windows-latest
+          - target: x86_64-pc-windows-msvc
+            os: windows-latest
           - target: x86_64-apple-darwin
             os: macos-latest
         toolchain: [stable]
-        features: ["", "ipadic", "unidic", "ko-dic", "cc-cedict"]
+        feature: ["defualt", "ipadic", "unidic", "ko-dic", "cc-cedict"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -51,20 +51,20 @@ jobs:
       - uses: actions-rs/cargo@v1.0.1
         with:
           command: build
-          args: --release --features "${{ matrix.features }}" --target=${{ matrix.target }}
+          args: --release --features "${{ matrix.feature }}" --target=${{ matrix.target }}
           use-cross: false
       - name: Build for Linux
         if: matrix.os == 'ubuntu-latest'
         run: |
-          zip --junk-paths lindera-${{ matrix.target }}.zip target/${{ matrix.target }}/release/lindera target/${{ matrix.target }}/release/lindera-ipadic-builder target/${{ matrix.target }}/release/lindera-unidic-builder target/${{ matrix.target }}/release/lindera-ko-dic-builder target/${{ matrix.target }}/release/lindera-cc-cedict-builder
-      # - name: Build for Windows
-      #   if: matrix.os == 'windows-latest'
-      #   run: |
-      #     7z a lindera-${{ matrix.target }}.zip target/${{ matrix.target }}/release/lindera.exe target/${{ matrix.target }}/release/lindera-ipadic-builder.exe target/${{ matrix.target }}/release/lindera-unidic-builder.exe target/${{ matrix.target }}/release/lindera-ko-dic-builder.exe target/${{ matrix.target }}/release/lindera-cc-cedict-builder.exe
+          zip --junk-paths lindera-${{ matrix.feature }}-${{ matrix.target }}.zip target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-ipadic-builder target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-unidic-builder target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-ko-dic-builder target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-cc-cedict-builder
+      - name: Build for Windows
+        if: matrix.os == 'windows-latest'
+        run: |
+          7z a lindera-${{ matrix.feature }}-${{ matrix.target }}.zip target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera.exe target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-ipadic-builder.exe target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-unidic-builder.exe target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-ko-dic-builder.exe target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-cc-cedict-builder.exe
       - name: Build for OSX
         if: matrix.os == 'macos-latest'
         run: |
-          zip --junk-paths lindera-${{ matrix.target }}.zip target/${{ matrix.target }}/release/lindera target/${{ matrix.target }}/release/lindera-ipadic-builder target/${{ matrix.target }}/release/lindera-unidic-builder target/${{ matrix.target }}/release/lindera-ko-dic-builder target/${{ matrix.target }}/release/lindera-cc-cedict-builder
+          zip --junk-paths lindera-${{ matrix.feature }}-${{ matrix.target }}.zip target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-ipadic-builder target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-unidic-builder target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-ko-dic-builder target/${{ matrix.feature }}-${{ matrix.target }}/release/lindera-cc-cedict-builder
       - uses: actions/upload-artifact@v2.3.1
         with:
           name: build-${{ matrix.target }}
@@ -96,8 +96,9 @@ jobs:
       matrix:
         target:
           - x86_64-unknown-linux-gnu
-          # - x86_64-pc-windows-msvc
+          - x86_64-pc-windows-msvc
           - x86_64-apple-darwin
+        feature: ["defualt", "ipadic", "unidic", "ko-dic", "cc-cedict"]
     name: Upload Release
     needs: [create-release]
     runs-on: ubuntu-latest
@@ -110,14 +111,14 @@ jobs:
           echo "::set-output name=url::$(cat create-release/release_upload_url.txt)"
       - uses: actions/download-artifact@v1
         with:
-          name: build-${{ matrix.target }}
+          name: build-${{ matrix.feature }}-${{ matrix.target }}
       - uses: actions/upload-release-asset@v1.0.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.upload-url.outputs.url }}
-          asset_path: ./build-${{ matrix.target }}/lindera-${{ matrix.target }}.zip
-          asset_name: lindera-${{ matrix.target }}.zip
+          asset_path: ./build-${{ matrix.feature }}-${{ matrix.target }}/lindera-${{ matrix.feature }}-${{ matrix.target }}.zip
+          asset_name: lindera-${{ matrix.feature }}-${{ matrix.target }}.zip
           asset_content_type: application/zip
 
   publish-crates:
