Remove UniDic feature

--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -33,7 +33,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
         toolchain: [stable]
-        features: ["default", "ipadic", "unidic", "ko-dic", "cc-cedict", "compress"]
+        features: ["default", "ipadic", "ko-dic", "cc-cedict", "compress"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
