--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           - target: x86_64-apple-darwin
             os: macos-latest
         toolchain: [stable]
-        feature: ["default", "ipadic", "unidic", "ko-dic", "cc-cedict"]
+        feature: ["default", "ipadic", "ko-dic", "cc-cedict"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -98,7 +98,7 @@ jobs:
           - x86_64-unknown-linux-gnu
           - x86_64-pc-windows-msvc
           - x86_64-apple-darwin
-        feature: ["default", "ipadic", "unidic", "ko-dic", "cc-cedict"]
+        feature: ["default", "ipadic", "ko-dic", "cc-cedict"]
     name: Upload Release
     needs: [create-release]
     runs-on: ubuntu-latest
